client/css/admin.scss
@import 'common';

@font-face {
	font-family: 'My Consolas';
	src: url('../assets/fonts/Consolas.ttf');
}

nav.navigation {
	width: 200px;
	background-color: $color-accent;
	color: whitesmoke;

	ul {
		margin: 0;
		list-style: none;

		li {
			height: 32px;
			box-sizing: content-box;
			padding: 6px 10px;
			display: flex;
			align-items: center;
			cursor: pointer;
			transition: all .05s;

			i {
				font-size: 1.5rem;
				margin-right: 10px;
			}

			&:not(.selected):hover {
				background-color: rgba(white, .08);
			}

			&[data-bind="console"].selected::after {
				border-right-color: rgb(30, 30, 30);
			}
			&.selected {
				background-color: rgba(white, .6);
				color: darken($color-accent, 15%);

				&::after {
					content: '';
					position: absolute;
					margin-left: 178px;
					border: solid transparent 6px;
					border-right: solid white 6px;
				}
			}
		}
	}
}

.contents {
	.content {
		display: none;
		height: 100%;
		overflow-y: auto;

		&.show {
			display: block;
		}
	}
}

$color-terminal-bg: rgb(30, 30, 30);
$color-terminal-text: rgb(216, 228, 228);

.cmd, .cmd span:not(.fas):not(.far):not(.fa), .terminal, .terminal-output>:not(.raw), .terminal-output>:not(.raw) a, .terminal-output>:not(.raw) span:not(.fas):not(.far):not(.fa) {
	font-family: 'My Consolas', 'sans-serif';
}
.cmd, .cmd div, .cmd span[data-text]:not(.cmd-inverted):not(.token):not(.emoji), .terminal, .terminal-output>:not(.raw) a, .terminal-output>:not(.raw) div, .terminal-output>:not(.raw) span[data-text]:not(.token):not(.inverted):not(.terminal-inverted):not(.cmd-inverted):not(.terminal-error):not(.emoji) {
	color: $color-terminal-text;
	background-color: $color-terminal-bg;
}
.terminal {
	background-color: $color-terminal-bg;

	.terminal-command > div {
		background-color: $color-terminal-bg;
	}

	&::-webkit-scrollbar {
		width: 8px;
		background-color: $color-terminal-bg;
	}
	&::-webkit-scrollbar-thumb {
		background-color: rgba(white, .2);

		&:hover {
			background-color: rgba(white, .3);
		}
		&:active {
			background-color: rgba(white, .4);
		}
	}
}

div.list-tab {
	.label {
		h2 {
			display: flex;
			border-bottom: solid #ccc 1px;

			span {
				font-weight: normal;
				font-size: 1.5rem;
				padding: 10px 20px;
				color: #222;
			}
		}
	}

	table {
		max-height: calc(100% - 1.5rem - 26px);

		tr {
			display: flex;
		}

		thead.thread-light {
			height: 40px;
			padding: 0 15px 0 0;
			background-color: rgb(245, 245, 245);
			border-bottom: solid gray 2px;

			tr {
				width: 100%;

				th[scope="col"] {
					border: none;
				}
			}
		}

		tbody {
			height: calc(100vh - 1.5rem - 67px);
			overflow-y: scroll;
			padding: 0;

			&::-webkit-scrollbar {
				width: 15px;
			}
			&::-webkit-scrollbar-thumb {
				background-color: #bbb;
			}

			tr:hover {
				background-color: rgb(245, 245, 245);
			}

			td {
				display: flex;
				align-items: center;
				font-size: .9rem;

				button {
					display: flex;
					justify-content: center;
					align-items: center;
					margin-right: 8px;
					padding: 0;
					width: 1.5rem;
					height: 1.5rem;
		
					&::after {
						position: absolute;
						background-color: rgba(#6c757d, .9);
						margin-top: 50px;
						padding: 0 5px;
						pointer-events: none;
						border-radius: 2px;
						visibility: hidden;
						opacity: 0;
						transition: all .2s;
					}
					&:hover::after {
						visibility: visible;
						opacity: 1;
					}
				}
			}
		}
	}
}

div.tab-server-log {
	.label form {
		margin: 0 40px 0 auto;
		display: inline-block;

		input {
			outline: 0;
			border: none;
			border-bottom: solid lightgray 1px;
			font-size: .9rem;
			height: 25px;
			width: 300px;
		}

		label {
			padding: 0;

			.bi {
				font-size: 1.2rem;
				cursor: pointer;
			}

			&::after {
				content: 'フィルターのヒント';
				font-style: normal;
				font-size: 1rem;
				font-weight: normal;
				display: inline-block;
				position: absolute;
				margin-top: 40px;
				margin-left: -65px;
				background-color: rgba(#444, .8);
				color: whitesmoke;
				padding: 3px 5px;
				border-radius: 3px;
				pointer-events: none;
				opacity: 0;
				visibility: hidden;
				transform-origin: top;
				transform: scale(.8);
				transition: all .1s;
			}
			&:hover::after {
				opacity: 1;
				visibility: visible;
				transform: scale(1);
			}
		}
	}
	table tr {
		& > *:nth-child(1) {
			width: 100px;
		}
		& > *:nth-child(2) {
			flex: 1;
		}
		& > *:nth-child(3) {
			width: 150px;
		}
	}
}

div.tab-users {
	table tr {
		& > *:nth-child(1) {
			width: 70px;
		}
		& > *:nth-child(2) {
			width: 200px;
		}
		& > *:nth-child(3) {
			flex: 1;
		}
		& > *:nth-child(4) {
			flex: 1;
		}
		& > *:nth-child(5) {
			display: flex;
			width: 80px;
		}
		
		& > td:nth-child(1) {
			padding: 4px 10px;

			img {
				width: 2.5rem;
				height: 2.5rem;
			}
		}
	}
}

div.tab-ban-ip {
	.label form {
		margin: auto 20px auto auto;
		width: 200px;
		height: 25px;
		display: flex;
		flex-direction: row;
		align-items: center;

		input {
			width: 175px;
			height: 25px;
			font-size: .9rem;
			outline: 0;
			border: none;
			border-bottom: solid #ccc 1px;
		}
		
		button {
			display: flex;
			justify-content: center;
			align-items: center;
			height: 25px;
			width: 25px;
			background-color: inherit;
			border: none;
			border-bottom: solid #ccc 1px;

			.bi {
				color: #999;
				font-size: 1.5rem;
			}
		}
	}

	table tr {
		& > *:nth-child(1) {
			width: 200px;
		}
		& > *:nth-child(2) {
			flex: 1;
		}
		& > *:nth-child(3) {
			width: 160px;
		}
		& > *:nth-child(4) {
			display: flex;
			width: 80px;
		}

		td button {
			&.remove::after {
				content: '削除';
			}
			&.edit::after {
				content: '編集';
			}
		}
	}
}

div.tab-status {
	padding: 0 20px;
	
	.monitor {
		width: 100%;
		height: 200px;

		h3 {
			display: flex;
			align-items: flex-end;
			margin: 10px 0 20px 0;

			.label {
			}
			.info {
				display: flex;
				margin: 0 10px 0 auto;
				font-weight: normal;
				font-size: 1rem;

				.network-up, .network-down {
					display: flex;
					align-items: center;
					height: 1.5rem;
					border-left: solid rgb(167, 79, 1) 3px;
					padding-left: 3px;
				}
				.network-up {
					margin-right: 20px;
				}
				.network-down {
					border-left-style: dashed;
				}
			}
		}

		canvas {
		}
	}
}

.overlay-window {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	visibility: hidden;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: rgba(black, .4);
	opacity: 0;
	overflow-y: initial;
	transition: all .2s;

	.overlay-content {
		z-index: 10;
		padding: 10px 20px;
		border-radius: 5px;
		box-shadow: rgba(gray, .1) 0 0 2px 2px;
		max-width: 800px;
		background-color: whitesmoke;
		overflow-y: auto;
		max-height: calc(100vh - 20px);

		&::-webkit-scrollbar {
			width: 10px;
		}
		&::-webkit-scrollbar-thumb {
			background-color: #ccc;
			border-radius: 5px;
			// border: solid #aaa 2px;
		}

		h2 {
			display: flex;
			align-items: center;

			span {
				font-size: 1.4rem;
			}

			.overlay-close {
				display: inline-block;
				width: 2rem;
				height: 2rem;
				margin-left: auto;
				border: none;
				background-color: transparent;
				border-radius: 50%;
				transition: all .2s;
				font-size: 1.5rem;
				
				&:hover {
					background-color: rgba(black, .05);
				}
			}
		}

		h3 {
			margin: 0;
			border-bottom: solid #ccc 1px;
			padding: 2px 0 2px 5px;
			margin: 0 0 10px 0;
			font-size: 1rem;
		}

		p {
			margin: 10px 0 10px 10px;
		}
	}

	&.show {
		opacity: 1;
		visibility: visible;
	}
}

.tab-users {

}

